# Wallet-Core

./: .clippy.toml  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  flutter_rust_bridge.yaml  justfile  pubspec.yaml
.github/workflows/: cd_precompiled.yml  rust.yml  test.yml  wasm_release.yml  wasm_release_internal.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/build_tool/lib/src/: build_tool.dart  crate_hash.dart  options.dart  precompile_binaries.dart
crates/bcr-core-cli/: Cargo.toml  config.toml
crates/bcr-core-cli/src/: clients.rs  main.rs  test_utils.rs  wallet.rs
crates/bcr-wallet-api/: Cargo.toml
crates/bcr-wallet-api/src/: config.rs  error.rs  lib.rs  mint.rs  purse.rs  restore.rs  test_utils.rs  utils.rs  wallet.rs
crates/bcr-wallet-api/src/pocket/: credit.rs  debit.rs  mod.rs  restore.rs  test_utils.rs
crates/bcr-wallet-api/src/purse/: mod.rs
crates/bcr-wallet-api/src/wallet/: api.rs  mod.rs  types.rs  util.rs
crates/bcr-wallet-cli/: Cargo.toml  alice.toml  bob.toml  carol.toml  local.toml  wallet.sh
crates/bcr-wallet-cli/src/: command.rs  main.rs
crates/bcr-wallet-core/: Cargo.toml  index.html  main.js
crates/bcr-wallet-core/scripts/: build_linux.sh  build_mac.sh  test_mac.sh
crates/bcr-wallet-core/src/: app.rs  clowder_models.rs  config.rs  db.rs  error.rs  job.rs  lib.rs  mint.rs  pocket.rs  purse.rs  restore.rs  types.rs  util.rs  utils.rs  wallet.rs
crates/bcr-wallet-core/src/db/: manager.rs  memory.rs  mod.rs  types.rs
crates/bcr-wallet-core/src/db/memory/: mod.rs
crates/bcr-wallet-core/src/db/rexie/: constants.rs  manager.rs  metadata.rs  mod.rs  utils.rs  wallet.rs
crates/bcr-wallet-core/src/mint/: cashu.rs  connector.rs  mod.rs  wildcat.rs
crates/bcr-wallet-core/src/persistence/: inmemory.rs  mod.rs  redb.rs  rexie.rs
crates/bcr-wallet-core/src/pocket/: credit.rs  debit.rs  mod.rs
crates/bcr-wallet-core/src/wallet/: api.rs  builder.rs  connector.rs  credit.rs  debit.rs  mod.rs  token.rs  types.rs  utils.rs  wallet.rs  wallet_builder.rs
crates/bcr-wallet-core/tests/: db.rs  rexie.rs  token.rs  wallet.rs
crates/bcr-wallet-ffi/: Cargo.toml  build.rs  cargokit.yaml
crates/bcr-wallet-ffi/src/: frb_generated.rs
crates/bcr-wallet-ffi/src/api/: mod.rs
crates/bcr-wallet-lib/: Cargo.toml
crates/bcr-wallet-lib/src/: lib.rs
crates/bcr-wallet-lib/src/test/: mod.rs
crates/bcr-wallet-lib/src/wallet/: token.rs
crates/bcr-wallet-lib/tests/: token.rs
crates/bcr-wallet-persistence/: Cargo.toml
crates/bcr-wallet-persistence/src/: error.rs  lib.rs  test_utils.rs
crates/bcr-wallet-persistence/src/redb/: jobs.rs  mintmelt.rs  mod.rs  pocket.rs  purse.rs  transaction.rs
ios/: wallet_ffi.podspec
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
linux/: CMakeLists.txt
macos/: wallet_ffi.podspec
windows/: CMakeLists.txt
