[workspace.package]
version = "0.7.4"
edition = "2024"
license = "MIT"

[workspace]
resolver = "3"

members = ["crates/bcr-wallet-core", "crates/bcr-wallet-cli"]

[workspace.dependencies]
anyhow = {version = "1"}
async-trait = {version = "0.1"}
bcr-common = {git = "https://github.com/BitcreditProtocol/bcr-common.git", branch = "stefan/clowder_client"}
bip39 = {version = "2.1", features = ["rand"]}
bitcoin = {version = "0.32"}
borsh = {version = "1"}
cashu = {version = "=0.13.1", default-features = false}
cdk = {version = "=0.13.1", default-features = false}
cdk-common = {version = "=0.13.1", default-features = false}
chrono = {version  = "0.4"}
ciborium = {version="0.2"}
futures = {version = "0.3"}
mockall = {version  = "0.13"}
nostr = {version = "0.43"}
nostr-sdk = {version = "0.43", features = ["nip59"]}
rand = {version = "0.9"}
redb = {version = "3.1.0"}
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
secp256k1 = {version = "0.29"}
serde = {version = "1"}
serde_json = {version = "1"}
strum = {version = "0.27"}
thiserror = {version = "2"}
tokio = {version = "1", features = ["macros", "rt-multi-thread", "time", "rt"]}
tokio-util = {version = "0.7"}
tracing = {version = "0.1", features = ["log"]}
tracing-log = {version = "0.2"}
tracing-subscriber = {version = "0.3"}
url = {version = "2.5"}
uuid = {version = "1", features = ["v4", "serde"]}
