[workspace.package]
version = "0.9.0"
edition = "2024"
license = "MIT"

[workspace]
resolver = "3"

members = ["crates/bcr-wallet-core", "crates/bcr-wallet-cli", "crates/bcr-wallet-persistence", "crates/bcr-wallet-api", "crates/bcr-wallet-ffi"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "symbols"

[workspace.dependencies]
async-trait = {version = "0.1"}
bcr-common = {git = "https://github.com/BitcreditProtocol/bcr-common.git", rev = "6fa6decd59da74e9a325a49d56adf8fe88e03bfc"}
bcr-wallet-core = {path = "./crates/bcr-wallet-core"}
bcr-wallet-api = {path = "./crates/bcr-wallet-api"}
bcr-wallet-persistence = {path = "./crates/bcr-wallet-persistence"}
bip39 = {version = "2.1", features = ["rand"]}
bitcoin = {version = "0.32"}
borsh = {version = "1"}
chrono = {version  = "0.4"}
ciborium = {version="0.2"}
futures = {version = "0.3"}
mockall = {version  = "0.13"}
nostr = {version = "0.43"}
nostr-sdk = {version = "0.43", features = ["nip59"]}
rand = {version = "0.9"}
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
secp256k1 = {version = "0.29"}
serde = {version = "1"}
serde_json = {version = "1"}
strum = {version = "0.27"}
thiserror = {version = "2"}
tokio = {version = "1", features = ["macros", "rt-multi-thread", "time", "rt"]}
tokio-util = {version = "0.7"}
tracing = {version = "0.1", features = ["log"]}
tracing-log = {version = "0.2"}
tracing-subscriber = {version = "0.3"}
url = {version = "2.5"}
uuid = {version = "1", features = ["v4", "serde"]}
