[package]
name = "bcr-wallet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bcr-common.workspace = true
bcr-wallet-core = {path = "../bcr-wallet-core"}
bip39.workspace = true
bitcoin.workspace = true
chrono.workspace = true
clap = {version = "4.0", features = ["derive"]}
config = {version="0.15"}
nostr-sdk = {workspace = true, features = ["nip06"]}
serde.workspace = true
tokio.workspace = true
toml = "0.8"
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
