[package]
name = "bcr-wallet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = {version = "1"}
bcr-common.workspace = true
bcr-wallet-core = {workspace = true}
bcr-wallet-api = {workspace = true}
bip39.workspace = true
bitcoin.workspace = true
chrono.workspace = true
clap = {version = "4.0", features = ["derive"]}
config = {version="0.15"}
nostr-sdk = {workspace = true, features = ["nip06"]}
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml = "0.9"
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
