[package]
name = "bcr-wallet-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcr-common = {workspace = true}
bcr-wallet-lib.workspace = true
bip39.workspace = true
bitcoin.workspace = true
borsh.workspace = true
cashu = { workspace = true, features = ["wallet"] }
cdk = { workspace = true, features = ["wallet"] }
chrono = {workspace = true}
futures = {workspace = true}
nostr-sdk = {workspace =true, features = ["nip06"]}
reqwest = {workspace = true}
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = {workspace = true, features = ["derive"]}
thiserror.workspace = true
tokio = {workspace = true}
tracing.workspace = true
url = {workspace = true}
uuid = {workspace = true }

[dev-dependencies]
bcr-common = {workspace = true, features = ["test-utils"]}
cdk-common.workspace = true
mockall = { workspace = true}
rand = {workspace = true}
tokio = {workspace = true}

