[package]
name = "bcr-wallet-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bcr-common = {workspace = true}
bip39.workspace = true
bitcoin.workspace = true
chrono = {workspace = true}
serde.workspace = true
strum = {workspace = true, features = ["derive"]}
thiserror = {workspace = true }
uuid = {workspace = true }

