[package]
name = "wallet_ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
android_logger = {version = "0.15"}
bcr-wallet-api = {workspace = true}
bcr-wallet-core = {workspace = true}
bip39 = {workspace = true}
bitcoin = {workspace = true}
bcr-common = {workspace = true}
chrono = {workspace = true}
env_logger = {version = "0.11"}
flutter_rust_bridge = { version = "=2.12.0", default-features = false, features = ["anyhow", "dart-opaque", "portable-atomic", "rust-async", "thread-pool", "user-utils", "wasm-start"] }
log = {version = "0.4"}
nostr-sdk = {workspace = true}
once_cell = {version = "1.21"}
tokio = {workspace = true}
tokio-util = {workspace = true}
uuid = {workspace = true}

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(frb_expand)']}
